# sensor-hub

./: .gitmodules
firmware/stm32/: .clang-format  .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  sensor-hub.ioc  sensor-hub.launch  stm32.ioc
firmware/stm32/Core/Inc/: ili9341.hpp  lcd_display.hpp  log.hpp  main.h  nrf_radio.hpp  safebits.hpp  spi.h  stm32f4xx_hal_conf.h
firmware/stm32/Core/Src/: app.cpp  gpio.c  ili9341.cpp  lcd_display.cpp  log.cpp  main.c  nrf_radio.cpp  sdio.c  spi.c  stm32f4xx_it.c  syscalls.cpp  tim.c  usart.c
firmware/stm32/bsp/: board_gpio.hpp
firmware/stm32/config/: FreeRTOSConfig.h
firmware/stm32/drv/: gpio.hpp  usart.cpp  usart.hpp
firmware/stm32/hub/: board_main.cpp  log.cpp  log.hpp
firmware/stm32/hub/bsp/: board_config.hpp  board_gpio.hpp
firmware/stm32/hub/config/: FreeRTOSConfig.h  lv_conf.h
firmware/stm32/hub/logging/: fifo_buffer.cpp  fifo_buffer.hpp  fifo_message_buffer.cpp  fifo_message_buffer.hpp  log.hpp  log_impl.cpp  log_impl.hpp
firmware/stm32/system/: system_hooks.cpp
firmware/stm32/tests/: CMakeLists.txt  fifo_message_buffer_tests.cpp  log_tests.cpp  stream_buffer_tests.cpp
firmware/stm32/tests/mocks/: FreeRTOS.h  unistd.h
hardware/sensor-hub/: fp-lib-table  mcu.kicad_sch  power.kicad_sch  sensor-hub-lib.kicad_sym  sensor-hub.kicad_pcb  sensor-hub.kicad_pro  sensor-hub.kicad_sch  sensors.kicad_sch  sym-lib-table  w5500.kicad_sch
hardware/sensor-hub/sensor-hub-footprints.pretty/: MicroSD_Det2.kicad_mod
hardware/sensor-hub/sensor-hub.pretty/: MicroSD_Det2.kicad_mod
(+38 files in other folders)
